feat: add public status to playlist
